rnsc/tests/snapshots/error-lexer-directives-dot_dot_method.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..method
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_dot_method.rns:1:1 ]
   │
 1 │ ..method
   │ ────┬───  
   │     ╰───── '..method' is not a recognized directive
   │ 
   │ Help: Did you mean '.method'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
