rnsc/tests/snapshots/error-lexer-directives-dot_public.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.public static HelloWorl
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_public.rns:1:1 ]
   │
 1 │ .public static HelloWorl
   │ ───┬───  
   │    ╰───── '.public' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
